--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -4,23 +4,23 @@
     "About company": "Om oss",
     "Contact": "Kontakt",
     "Change language": "Endre språk",
+
     "Sock from A to Z": "Sokker fra A til Å",
     "See newest offer": "Se nyeste tilbud",
     "Join the group of satisfied customers": "Bli med i gruppen av fornøyde kunder",
     "exists since 1989": "I drift siden 1989",
     "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Selskapet Dziewiarstwo MASZYNOWE Mieczysław Klimczak eksisterer på markedet siden 1989",
     "Learn more": "Finn ut mer ",
+
     "Suit Socks": "Dress Sokker",
     "Men Socks": "Herresokker",
     "Women Socks": "Damesokker",
     "Van Socks": "Van Sokker",
     "Bamboo Socks": "Bambus Sokker",
-    "Category_7": "Halvstrømpe/Lårstrømpe",
     "Men": "Menn",
     "Women": "Kvinner",
     "Sport": "Sport",
-    "Amount in package": "Antall par i pakken",
-    "Go back": "Gå tilbake",
+
     "Perfectly fit suit.": "Passer perfekt til dress.",
     "Socks ideal for a suit and not only.": "Sokker ideell til dress og annen bekledning.",
     "Made from high quality combed cotton.": "Laget av høy kvalitet kjemmet bomull.",
@@ -32,6 +32,7 @@
     "Comfortable to wear.": "Behagelig å ha på.",
     "Flat seam.": "Flat søm.",
     "Wide ribbing causing no pinching.": "Brede ribbing forårsaker ingen kniping",
+
     "Black": "Svart",
     "Gray": "Grå",
     "Dark gray": "Mørkegrå",
@@ -41,6 +42,20 @@
     "Beige": "Beige",
     "Graphite": "Grafitt",
     "White": "Hvit",
+    "Steel": "Stål farge",
+    "Navy blue": "Marineblå",
+
+    "See more": "Finn ut mer",
+    "Youth": "For unge",
+    "Show": "Vis",
+    "from": "av",
+    "available": "tilgjengelige",
+
+    "Amount in package": "Antall par i pakken",
+    "Colors": "Farger",
+    "Sizes": "Størrelser",
+    "Go back": "Gå tilbake",
+
     "We declare thatProdukt europejski. the production of our socks are adhered to the law, in particular human rights.": "Vi erklærer at produksjonen av sokkene blir etterfulgt loven om særlig menneskerettigheter.",
     "No children or minors work in the production.": "Ingen barn eller mindreårige arbeider i produksjonen.",
     "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produksjonen er basert på naturlige råvarer (bomullsgarn og bambus), noe som minimerer den negative innvirkningen på miljøet.",
@@ -73,14 +88,7 @@
     "Half-Frotte 3/4 Socks": "Halv Frotté 3/4",
     "Half-Frotte Socks": "Halv Frotté",
     "Frotte Socks": "Frotté Sokker",
-    "See more": "Finn ut mer",
-    "Youth": "For unge",
-    "Show": "Vis",
-    "from": "av",
-    "available": "tilgjengelige",
     "Different patterns.": "Ulike mønstre.",
-    "Steel": "Stål farge",
-    "Navy blue": "Marineblå",
     "More colors available on special order": "Flere farger tilgjengelig på spesialbestilling",
     "Additional ribbing on the midfoot provides enhanced sock stabilization.": "Ekstra ribbing på midfoot gir forbedret sokk stabilisering.",
     "Long sports puller.": "Long sport avtrekker.",
