--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -34,6 +34,8 @@
     "available": "dostępnych",
 
     "Amount in package": "Ilość w paczce",
+    "Colors": "Kolory",
+    "Sizes": "Rozmiary",
     "Go back": "Wróć",
 
     "Different patterns.": "Różne wzory.",
@@ -41,6 +43,7 @@
     "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
     "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
     "Flat seam and wide ribbing causing no pinching.": "Płaski szew i szeroki nieuciskający ściągacz.",
+    "Flat seam.": "Płaski szew.",
     "Socks with silver ions.Socks with silver ions.": "Skarpety z jonami srebra.",
     "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
     "Wide ribbing causing no pinching.": "Szeroki nieuciskający ściągacz.",
