Change of image size to less than 50 kb

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -32,6 +32,7 @@
     "Comfortable to wear.": "Behagelig å ha på.",
     "Flat seam.": "Flat søm.",
     "Wide ribbing causing no pinching.": "Brede ribbing forårsaker ingen kniping",
+    "Perfect for autumn or winter.": "Perfekt for høst og vinter.",
 
     "Black": "Svart",
     "Gray": "Grå",
