--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -51,6 +51,7 @@
     "Additional silver ions increase the antiperspirant and antimicrobial properties.": "Dodatkowe jony srebra zwiększają właściwości przeciwpotne i przeciwbakteryjne.",
     "Long sports puller.": "Długi sportowy ściągacz.",
     "Without rubber in the waist band.": "Bez gumki w ściągaczu.",
+    "Perfect for autumn or winter.": "Idealne na jesień i zimę.",
 
     "Black": "Czarny",
     "Ashen": "Popiel",
