--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -52,6 +52,7 @@
     "Long sports puller.": "Długi sportowy ściągacz.",
     "Without rubber in the waist band.": "Bez gumki w ściągaczu.",
     "Perfect for autumn or winter.": "Idealne na jesień i zimę.",
+    "True comfort and elegance.": "Prawdziwy komfort i elegancja.",
 
     "Black": "Czarny",
     "Ashen": "Popiel",
