--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -53,6 +53,7 @@
     "Without rubber in the waist band.": "Bez gumki w ściągaczu.",
     "Perfect for autumn or winter.": "Idealne na jesień i zimę.",
     "True comfort and elegance.": "Prawdziwy komfort i elegancja.",
+    "Perfect for people with blood circulation problems.": "Idealny dla osób z problemami krążenia.",
 
     "Black": "Czarny",
     "Ashen": "Popiel",
